2015-04-05  Werner Lemberg  <wl@gnu.org>

	[ftdump] Simplify code.

	* src/ftdump.c (put_unicode_be16_as_utf8): Fold into...
	(put_unicode_b316): This function, with an additional argument.
	Update all callers.

2015-04-03  Werner Lemberg  <wl@gnu.org>

	[ftdump] Remove dead code.

	* src/ftdump.c (debug, trace_level): Remove.
	(usage): Remove #ifdef'ed code.
	(main): Don't handle obsolete options `-d' and `-l'.
	Remove #ifdef'ed code.

2015-04-03  Werner Lemberg  <wl@gnu.org>

	[ftdump] Add option `-u' to emit data in UTF-8 encoding.

	* src/ftdump.c (utf8): New global variable.
	(usage): Updated.
	(put_unicode_be16): Only emit characters < 0x80 as-is.
	(put_unicode_be_as_utf8): New function.
	(Print_Sfnt_Names, Print_MM_Axes): Use it.
	(main): Handle new option `-u'.

	* src/ftdump.1: Updated.

2015-04-02  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Make the first six axes accessible.

	We now use keys F1-F6 and 1-6.  F7 and F8 get its original function
	back (this is, adjusting the glyph index by 10).

	* src/ftmulti.c (MAX_MM_AXES): New macro.  Replaces `T1_MAX_MM_AXIS'
	everywhere.
	(Render_All): Adjust vertical position depending on number of axes.
	(Help): Updated.
	(Process_Event): Handle new keys.
	(main): Use two lines for axes if we have more than three.

2015-04-01  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Fix minor memory leak.

	* src/ftgrid.c (GridStatusRec): Add `stroker' field.
	(grid_status_draw_outline): Updated.
	(main): Call `FT_Stroker_Done'.

2015-03-30  Werner Lemberg  <wl@gnu.org>

	[ftdump] Show proper names for GX axes.

	* src/ftdump.c (Print_MM_Axes): Try to find and display English
	versions of the GX axis names (stored in the `name' table) instead
	of 4-letter tags.

2015-03-29  Werner Lemberg  <wl@gnu.org>

	[ftgrid, ftmulti]: Handle GX fonts with more than 4 axes.

	ftgrid now handles up to 32 axes, while ftmulti will ignore all axes
	but the first four.

	* src/ftgrid.c (MAX_MM_AXES): New macro.